# prefetch

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  GITCLIENT_PROJECT_BRIEF.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  error.rs  events.rs  lib.rs  main.rs  oauth.rs  tracing_setup.rs  watcher.rs
src-tauri/src/commands/: forge.rs  helpers.rs  lfs.rs  mod.rs  profile.rs  repo.rs
src-tauri/src/git/: forge.rs  graph.rs  lfs.rs  mod.rs  profile.rs  repository.rs  types.rs
src/components/: update-checker.tsx  update-indicator.tsx  updater.tsx
src/components/graph/: commit-graph-canvas.tsx
src/components/layout/: app-layout.tsx  detail-panel.tsx  graph-panel.tsx  sidebar-panel.tsx  titlebar.tsx
src/components/sidebar/: branch-list.tsx  lfs-panel.tsx  stash-list.tsx  tag-list.tsx
src/components/staging/: commit-box.tsx  conflict-editor.tsx  diff-minimap.tsx  diff-toolbar.tsx  diff-viewer-interactive.tsx  diff-viewer-readonly.tsx  diff-viewer.tsx  file-list.tsx
src/components/ui/: checkbox.tsx  context-menu.tsx  file-icon.tsx  forge-icons.tsx  forge-settings.tsx  multi-step-toast.tsx  profile-modal.tsx  profile-switcher.tsx  resize-handle.tsx  settings-modal.tsx  settings-page.tsx  sonner.tsx  tooltip.tsx
src/components/ui/settings/: appearance-section.tsx  general-section.tsx  lfs-section.tsx  profiles-section.tsx
src/lib/: codemirror-lang.ts  codemirror-theme.ts  commands.ts  conflict-regions.ts  database.ts  file-tree.ts  gravatar.ts  multi-step.ts  patch.ts  shiki.ts  themes.ts  tracing.ts
src/stores/: profile-store.ts  repo-store.ts  theme-store.ts  updater-store.ts
src/types/: git.ts  profile.ts
