[package]
name = "prefetch"
version = "0.2.0"
description = "A desktop git client"
authors = ["Sph3ricalPeter <sph3ricalpeter@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "prefetch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = { version = "2.5.0", features = ["watch"] }
tauri-plugin-os = "2.3.2"
git2 = "0.20"
tokio = { version = "1.52.1", features = ["sync"] }
notify = "8"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
urlencoding = "2"
open = "5"
